generated/checker-for-evaluation/generated/test-Integer-Overflow-b0b0d811eac6b4c52cb9ad632fa6384cf48869e7/build_logs/7/build_error_log1.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘bool {anonymous}::MulVisitor::VisitBinaryOperator(clang::BinaryOperator*)’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:54:39: error: ‘class clang::ASTContext’ has no member named ‘getTypeSizeInBits’; did you mean ‘getTypeSizeInChars’?
   54 |     const uint64_t LhsWidth = Context.getTypeSizeInBits(LhsType);
      |                                       ^~~~~~~~~~~~~~~~~
      |                                       getTypeSizeInChars
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:55:39: error: ‘class clang::ASTContext’ has no member named ‘getTypeSizeInBits’; did you mean ‘getTypeSizeInChars’?
   55 |     const uint64_t RhsWidth = Context.getTypeSizeInBits(RhsType);
      |                                       ^~~~~~~~~~~~~~~~~
      |                                       getTypeSizeInChars
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:73:40: error: base operand of ‘->’ has non-pointer type ‘clang::ASTContext’
   73 |       ExplodedNode *N = BR.getContext()->getPredecessor();
      |                                        ^~
In file included from /usr/include/c++/11/memory:76,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/llvm/include/llvm/Support/Casting.h:20,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Basic/LLVM.h:21,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Basic/DiagnosticIDs.h:17,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Basic/Diagnostic.h:17,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/NestedNameSpecifier.h:18,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/Type.h:21,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/CanonicalType.h:17,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/ASTContext.h:18,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:1:
/usr/include/c++/11/bits/unique_ptr.h: In instantiation of ‘typename std::_MakeUniq<_Tp>::__single_object std::make_unique(_Args&& ...) [with _Tp = clang::ento::BugReport; _Args = {const clang::ento::BugType&, llvm::StringRef, clang::ento::ExplodedNode*&}; typename std::_MakeUniq<_Tp>::__single_object = std::unique_ptr<clang::ento::BugReport>]’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:84:48:   required from here
/usr/include/c++/11/bits/unique_ptr.h:962:30: error: invalid new-expression of abstract class type ‘clang::ento::BugReport’
  962 |     { return unique_ptr<_Tp>(new _Tp(std::forward<_Args>(__args)...)); }
      |                              ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:6:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:119:7: note:   because the following virtual functions are pure within ‘clang::ento::BugReport’:
  119 | class BugReport {
      |       ^~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:173:34: note:     ‘virtual clang::ento::PathDiagnosticLocation clang::ento::BugReport::getLocation() const’
  173 |   virtual PathDiagnosticLocation getLocation() const = 0;
      |                                  ^~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:178:23: note:     ‘virtual const clang::Decl* clang::ento::BugReport::getDeclWithIssue() const’
  178 |   virtual const Decl *getDeclWithIssue() const = 0;
      |                       ^~~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:189:34: note:     ‘virtual clang::ento::PathDiagnosticLocation clang::ento::BugReport::getUniqueingLocation() const’
  189 |   virtual PathDiagnosticLocation getUniqueingLocation() const = 0;
      |                                  ^~~~~~~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:195:23: note:     ‘virtual const clang::Decl* clang::ento::BugReport::getUniqueingDecl() const’
  195 |   virtual const Decl *getUniqueingDecl() const = 0;
      |                       ^~~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:248:16: note:     ‘virtual void clang::ento::BugReport::Profile(llvm::FoldingSetNodeID&) const’
  248 |   virtual void Profile(llvm::FoldingSetNodeID& hash) const = 0;
      |                ^~~~~~~
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
